--- a/index.html
+++ b/index.html
@@ -1,1 +1,14 @@
-<h1>Hello World </h1>
+---
+layout: default
+title: "Muamer Ribica"
+---
+
+<section class="content">
+  <ul>
+    {% for post in site.posts %}
+    <li>
+      <span>{{ post.date | date: "%B %e, %Y" }}</span> <a href="{{ post.url }}">{{ post.title }}</a>
+    </li>
+    {% endfor %}
+  </ul>
+</section>
