--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@ title: "Muamer Ribica"
 ---
 
 <section class="content">
-  <ul>
+  <ul class="postsList">
     {% for post in site.posts %}
     <li>
       <span>{{ post.date | date: "%B %e, %Y" }}</span> <a href="{{ post.url }}">{{ post.title }}</a>
