--- a/index.html
+++ b/index.html
@@ -1,14 +1,15 @@
 ---
 layout: default
-title: "Muamer Ribica"
+title: "mribica"
 ---
 
-<section class="content">
-  <ul class="postsList">
-    {% for post in site.posts %}
+<ul class="postsList">
+{% for post in site.posts %}
+  {% unless post.draft %}
     <li>
-      <span>{{ post.date | date: "%B %e, %Y" }}</span> <a href="{{ post.url }}">{{ post.title }}</a>
+      <span>{{ post.date | date: "%B %e, %Y" }}</span> 
+      <a href="{{ post.url }}">{{ post.title }}</a>
     </li>
-    {% endfor %}
-  </ul>
-</section>
+  {% endunless %}
+{% endfor %}
+</ul>
